<resources>
    <string name="app_name">TeamBuilder</string>
    <string name="email_my_type_advantages">Email My Type Advantages</string>
    <string name="enter_your_team_types">Enter Your Team Types!</string>
    <string name="pokemon_1">Pokemon #1</string>
    <string name="pokemon_2">Pokemon #2</string>
    <string name="pokemon_3">Pokemon #3</string>
    <string name="pokemon_4">Pokemon #4</string>
    <string name="pokemon_5">Pokemon #5</string>
    <string name="pokemon_6">Pokemon #6</string>
    <string name="show_type_advantages">Show Type Advantages</string>
    <string name="text_my_type_advantages">Text My Type Advantages</string>
    <string name="create_a_new_user">Create a New User</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in_with_existing_credentials">Sign In With Existing Credentials</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_to_firebase">Add to Firebase</string>
    <string name="delete_from_firebase">Delete from Firebase</string>
    <string name="email_advantages">Email Advantages</string>
    <string name="text_advantages">Text Advantages</string>
</resources>
