<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="css.cis3334.teambuilder.LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewUserName" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextEmail"
            android:inputType="textPersonName"
            tools:ignore="LabelFor,TextFields" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPassword" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/editTextPassword"
            android:layout_weight="1"
            android:inputType="textPersonName"
            tools:ignore="InefficientWeight,LabelFor,TextFields" />
    </LinearLayout>

    <Button
        android:text="@string/sign_in_with_existing_credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLogin" />

    <Button
        android:text="@string/create_a_new_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonCreate" />

</LinearLayout>